[project]
authors = [{ name = "dimiarbre", email = "dimitri.lereverend@gmail.com" }]
dependencies = []
description = "A code visualizer on basic data structure."
name = "algovisim"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
algovisim = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=24.10.0,<25"
manim = ">=0.18.1,<0.19"
isort = ">=5.13.2,<6"
mypy = ">=1.12.0,<2"
